--- a/functions/package.json
+++ b/functions/package.json
@@ -15,11 +15,13 @@
   "main": "lib/index.js",
   "dependencies": {
     "@google-cloud/tasks": "^2.3.0",
+    "cors": "^2.8.5",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "twilio": "^3.56.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.6.0",
